--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
             <h2>Welcome Back &#128075</h2>
 			<p>Today is a new day. It's your day. You shape it.<br>
 			Sign in to start managing your projects.</p></div>
-            <form>
+            <form id="login-form">
                 <label>Email</label><br>
                 <input type="text" placeholder="Example@email.com" required>
                 <label>Password</label><br>
                 <input type="password" placeholder="At least 8 characters" required>
+                <input type="checkbox" id="remember-me">
+                                <label for="remember-me">Remember Me</label><br>
 				                <div class="forgot-password">
-                    <a href="#">Forgot Password?</a>
+                    <a href="#" id="forgot-password-link">Forgot Password?</a>
                 </div>
                 <input type="submit" value="Sign In">
 				<div class="sign">
-                    <p>Don't you have an account?<a href="#">Sign Up</a></p>
+                    <div class="error-message" id="error-message"></div>
+                    <p>Don't you have an account?<a href="signup.html" id="signup-link">Sign Up</a></p>
                 </div>
                 <div class="footer"><br>
                    @ 2023 ALL RIGHTS RESERVED.
@@ -38,3 +41,5 @@
     </div>
 </body>
 </html>
+
+<script src="script.js"></script>
