--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dash</title>
-  </head>
-  <body>
-    <img src="2.jpg" alt="" />
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>List Product - GADGETPEDIA</title>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+    <div class="container">
+        <h2>Smartphone</h2>
+        <div class="product-list" id="smartphone-list">
+        </div>
+
+        <h2>Laptop</h2>
+        <div class="product-list" id="laptop-list">
+        </div>
+
+        <h2>Headset</h2>
+        <div class="product-list" id="headset-list">
+        </div>
+
+        <h2>Casing Smartphone</h2>
+        <div class="product-list" id="casing-list">
+        </div>
+    </div>
+
+    <script src="/js/script2.js"></script>
+</body>
 </html>
