--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="stiles.css">
+    <link rel="stylesheet" href="/css/stiles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
 </head>
 <body>
@@ -27,7 +27,7 @@
                 <input type="submit" value="Sign In">
 				<div class="sign">
                     <div class="error-message" id="error-message"></div>
-                    <p>Don't you have an account?<a href="signup.html" id="signup-link">Sign Up</a></p>
+                    <p>Don't you have an account?<a href="#" id="signup-link">Sign Up</a></p>
                 </div>
                 <div class="footer"><br>
                    @ 2023 ALL RIGHTS RESERVED.
@@ -42,4 +42,4 @@
 </body>
 </html>
 
-<script src="script.js"></script>
+<script src="/js/script.js"></script>
